--- a/react/package.json
+++ b/react/package.json
@@ -5,13 +5,15 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "tsc --build && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
 		"check:types": "tsc --build",
 		"check:eslint": "bun --bun eslint . --quiet"
 	},
 	"dependencies": {
+		"@tanstack/react-router": "1.131.16",
+		"@tanstack/react-router-devtools": "1.131.16",
 		"react": "19.1.1",
 		"react-dom": "19.1.1"
 	},
@@ -20,6 +22,7 @@
 		"@eslint/js": "9.28.0",
 		"@morev/eslint-disable-autofix": "1.0.2",
 		"@stylistic/eslint-plugin": "4.4.1",
+		"@tanstack/router-plugin": "1.131.16",
 		"@types/bun": "1.2.20",
 		"@types/react": "19.1.10",
 		"@types/react-dom": "19.1.7",
