--- a/react/package.json
+++ b/react/package.json
@@ -12,11 +12,14 @@
 		"check:eslint": "bun --bun eslint . --quiet"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "2.8.2",
 		"@tanstack/react-router": "1.131.16",
 		"@tanstack/react-router-devtools": "1.131.16",
 		"es-toolkit": "1.39.9",
+		"nanoid": "5.1.5",
 		"react": "19.1.1",
-		"react-dom": "19.1.1"
+		"react-dom": "19.1.1",
+		"react-redux": "9.2.0"
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "1.51.1",
