--- a/react/.vscode/settings.json
+++ b/react/.vscode/settings.json
@@ -2,6 +2,11 @@
 	"[javascript][javascriptreact][typescript][typescriptreact]": {
 		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
 	},
+	"cSpell.words": [
+		"valibot",
+		"worklog",
+		"worklogs"
+	],
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": "explicit"
 	},
