--- a/react/package.json
+++ b/react/package.json
@@ -13,20 +13,24 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "2.8.2",
-		"@tanstack/react-router": "1.131.16",
-		"@tanstack/react-router-devtools": "1.131.16",
+		"@tanstack/react-query": "5.85.3",
+		"@tanstack/react-router": "1.131.17",
+		"date-fns": "4.1.0",
 		"es-toolkit": "1.39.9",
 		"nanoid": "5.1.5",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
-		"react-redux": "9.2.0"
+		"react-redux": "9.2.0",
+		"valibot": "1.1.0"
 	},
 	"devDependencies": {
 		"@eslint-react/eslint-plugin": "1.51.1",
 		"@eslint/js": "9.28.0",
 		"@morev/eslint-disable-autofix": "1.0.2",
 		"@stylistic/eslint-plugin": "4.4.1",
-		"@tanstack/router-plugin": "1.131.16",
+		"@tanstack/react-query-devtools": "5.85.3",
+		"@tanstack/react-router-devtools": "1.131.17",
+		"@tanstack/router-plugin": "1.131.17",
 		"@types/bun": "1.2.20",
 		"@types/react": "19.1.10",
 		"@types/react-dom": "19.1.7",
