--- a/react/.vscode/settings.json
+++ b/react/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
 	},
 	"cSpell.words": [
+		"unocss",
 		"valibot",
 		"worklog",
 		"worklogs"
