--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
 		"@reduxjs/toolkit": "2.8.2",
 		"@tanstack/react-query": "5.85.3",
 		"@tanstack/react-router": "1.131.17",
+		"@unocss/reset": "66.3.3",
 		"date-fns": "4.1.0",
 		"es-toolkit": "1.39.9",
 		"nanoid": "5.1.5",
@@ -34,6 +35,7 @@
 		"@types/bun": "1.2.20",
 		"@types/react": "19.1.10",
 		"@types/react-dom": "19.1.7",
+		"@unocss/eslint-config": "66.3.3",
 		"@vitejs/plugin-react": "5.0.0",
 		"eslint": "9.28.0",
 		"eslint-import-resolver-typescript": "4.4.3",
@@ -46,6 +48,7 @@
 		"sonda": "0.9.0",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.33.1",
+		"unocss": "66.3.3",
 		"vite": "7.1.2",
 		"vite-tsconfig-paths": "5.1.4"
 	}
