--- a/react/package.json
+++ b/react/package.json
@@ -37,11 +37,12 @@
 		"@types/react-dom": "19.1.7",
 		"@unocss/eslint-config": "66.3.3",
 		"@vitejs/plugin-react": "5.0.0",
+		"babel-plugin-react-compiler": "19.1.0-rc.3",
 		"eslint": "9.28.0",
 		"eslint-import-resolver-typescript": "4.4.3",
 		"eslint-plugin-import-export-newline": "1.0.0",
 		"eslint-plugin-import-x": "4.15.1",
-		"eslint-plugin-react-hooks": "5.2.0",
+		"eslint-plugin-react-hooks": "6.0.0-rc.2",
 		"eslint-plugin-react-refresh": "0.4.20",
 		"eslint-plugin-simple-import-sort": "12.1.1",
 		"globals": "16.2.0",
