Add TanStack Devtools

--- a/react/package.json
+++ b/react/package.json
@@ -12,8 +12,9 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "2.8.2",
-		"@tanstack/react-query": "5.85.3",
-		"@tanstack/react-router": "1.131.17",
+		"@tanstack/react-devtools": "0.6.4",
+		"@tanstack/react-query": "5.87.1",
+		"@tanstack/react-router": "1.131.35",
 		"@unocss/reset": "66.3.3",
 		"date-fns": "4.1.0",
 		"es-toolkit": "1.39.9",
@@ -28,8 +29,9 @@
 		"@eslint/js": "9.28.0",
 		"@morev/eslint-disable-autofix": "1.0.2",
 		"@stylistic/eslint-plugin": "4.4.1",
-		"@tanstack/react-query-devtools": "5.85.3",
-		"@tanstack/react-router-devtools": "1.131.17",
+		"@tanstack/devtools-vite": "0.2.12",
+		"@tanstack/react-query-devtools": "5.87.1",
+		"@tanstack/react-router-devtools": "1.131.35",
 		"@tanstack/router-plugin": "1.131.17",
 		"@types/bun": "1.2.20",
 		"@types/react": "19.1.10",
