--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
 		"@unocss/reset": "66.3.3",
 		"date-fns": "4.1.0",
 		"es-toolkit": "1.39.9",
+		"mutative": "1.2.0",
 		"nanoid": "5.1.5",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
