--- a/react/package.json
+++ b/react/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "tsc --build && vite build",
 		"preview": "vite preview",
+		"test": "vitest",
 		"check:types": "tsc --build",
 		"check:eslint": "bun --bun eslint . --quiet"
 	},
@@ -53,6 +54,7 @@
 		"typescript-eslint": "8.33.1",
 		"unocss": "66.3.3",
 		"vite": "7.1.2",
-		"vite-tsconfig-paths": "5.1.4"
+		"vite-tsconfig-paths": "5.1.4",
+		"vitest": "3.2.4"
 	}
 }
