--- a/react/package.json
+++ b/react/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc --build && vite build",
 		"preview": "vite preview",
-		"test": "vitest",
+		"test:watch": "vitest",
+		"test:bench:run": "vitest bench --run",
 		"check:types": "tsc --build",
 		"check:eslint": "bun --bun eslint . --quiet"
 	},
