--- a/react/package.json
+++ b/react/package.json
@@ -49,6 +49,7 @@
 		"eslint-plugin-react-hooks": "6.0.0-rc.2",
 		"eslint-plugin-react-refresh": "0.4.20",
 		"eslint-plugin-simple-import-sort": "12.1.1",
+		"eslint-plugin-unicorn": "61.0.2",
 		"globals": "16.4.0",
 		"sonda": "0.9.0",
 		"typescript": "5.9.2",
