--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
+	"[javascript][javascriptreact][typescript][typescriptreact]": {
+		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+	},
 	"cSpell.words": [
-		"timesheet"
-	]
+		"timesheet",
+		"unocss",
+		"valibot",
+		"worklog",
+		"worklogs"
+	],
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit"
+	},
+	/*
+		Necessary to support ESLint TypeScript config file.
+		More info: https://github.com/microsoft/vscode-eslint/issues/1917#issuecomment-3059655482
+	*/
+	"eslint.runtime": "bun",
+	"npm.scriptRunner": "bun"
 }
