--- a/solid/package.json
+++ b/solid/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "state-manager-examples-react",
+	"name": "state-manager-examples-solid",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -14,40 +14,29 @@
 		"fix:eslint": "bun --bun eslint . --quiet --fix"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "2.9.0",
-		"@tanstack/react-query": "5.89.0",
-		"@tanstack/react-router": "1.131.44",
+		"@tanstack/solid-query": "5.89.0",
+		"@tanstack/solid-router": "1.131.44",
 		"@unocss/reset": "66.5.1",
 		"date-fns": "4.1.0",
 		"es-toolkit": "1.39.10",
-		"mutative": "1.2.0",
 		"nanoid": "5.1.5",
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
-		"react-redux": "9.2.0",
+		"solid-js": "1.9.9",
 		"valibot": "1.1.0"
 	},
 	"devDependencies": {
-		"@eslint-react/eslint-plugin": "1.53.1",
 		"@morev/eslint-disable-autofix": "1.0.2",
 		"@stylistic/eslint-plugin": "5.3.1",
 		"@tanstack/devtools-vite": "0.3.0",
-		"@tanstack/react-devtools": "0.6.9",
-		"@tanstack/react-query-devtools": "5.89.0",
-		"@tanstack/react-router-devtools": "1.131.44",
 		"@tanstack/router-plugin": "1.131.44",
+		"@tanstack/solid-devtools": "0.6.9",
+		"@tanstack/solid-query-devtools": "5.89.0",
+		"@tanstack/solid-router-devtools": "1.131.44",
 		"@types/bun": "1.2.22",
-		"@types/react": "19.1.13",
-		"@types/react-dom": "19.1.9",
 		"@unocss/eslint-config": "66.5.1",
-		"@vitejs/plugin-react": "5.0.3",
-		"babel-plugin-react-compiler": "19.1.0-rc.3",
 		"eslint": "9.35.0",
 		"eslint-import-resolver-typescript": "4.4.4",
 		"eslint-plugin-import-export-newline": "1.0.0",
 		"eslint-plugin-import-x": "4.16.1",
-		"eslint-plugin-react-hooks": "6.0.0-rc.2",
-		"eslint-plugin-react-refresh": "0.4.20",
 		"eslint-plugin-simple-import-sort": "12.1.1",
 		"eslint-plugin-unicorn": "61.0.2",
 		"globals": "16.4.0",
@@ -56,6 +45,7 @@
 		"typescript-eslint": "8.44.0",
 		"unocss": "66.5.1",
 		"vite": "7.1.6",
+		"vite-plugin-solid": "2.11.8",
 		"vite-tsconfig-paths": "5.1.4",
 		"vitest": "3.2.4"
 	}
