--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
 		More info: https://github.com/microsoft/vscode-eslint/issues/1917#issuecomment-3059655482
 	*/
 	"eslint.runtime": "bun",
+	"npm.packageManager": "yarn",
 	"npm.scriptRunner": "bun"
 }
