--- a/solid/package.json
+++ b/solid/package.json
@@ -38,6 +38,7 @@
 		"eslint-plugin-import-export-newline": "1.0.0",
 		"eslint-plugin-import-x": "4.16.1",
 		"eslint-plugin-simple-import-sort": "12.1.1",
+		"eslint-plugin-solid": "0.14.5",
 		"eslint-plugin-unicorn": "61.0.2",
 		"globals": "16.4.0",
 		"sonda": "0.9.0",
