--- a/solid/package.json
+++ b/solid/package.json
@@ -41,6 +41,7 @@
 		"eslint-plugin-solid": "0.14.5",
 		"eslint-plugin-unicorn": "61.0.2",
 		"globals": "16.4.0",
+		"solid-devtools": "0.34.3",
 		"sonda": "0.9.0",
 		"typescript": "5.9.2",
 		"typescript-eslint": "8.44.0",
